cabal-version:       3.0

name:                assignment-arrow

version:             0.1.0.0

author:              Talen & Compilers

build-type:          Simple

library
  exposed-modules:      Driver

  other-modules:        Algebra
                      , Model
                      , Interpreter
                      , Lexer
                      , Parser

  build-depends:       base >=4.14,
                       containers,
                       uu-tc,
                       array

  build-tool-depends:  alex:alex,
                       happy:happy

  hs-source-dirs:      src

  default-language:    Haskell2010

